--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">ShoeStore</string>
+
+<!--    Button Labels   -->
+    <string name="login">Login</string>
+    <string name="signup">Sign Up</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+
+<!--    Text   -->
+    <string name="welcome">Welcome</string>
+    <string name="welcome_message">Click the button to view instructions</string>
+    <string name="instructions">Instructions</string>
+    <string name="instructions_message">Click the button to view the shoe listing. \nIf this is the first time usage the listing will be empty. \nClick the \"+\" button to add new shoe details.</string>
+
+<!--    Labels   -->
+    <string name="shoe_name">Name</string>
+    <string name="shoe_company">Company</string>
+    <string name="shoe_size">Size</string>
+    <string name="shoe_desc">Description</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
