--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="browse">Browse</string>
     <string name="new_item">New Item</string>
     <string name="logout">Logout</string>
+    <string name="empty_input_validation_error">This field is required</string>
 </resources>
